# Render-Engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
deprecated/: imgui.code
deprecated/doc/: Ladder Logic Core Algorithm  Ladder Logic GUI
deprecated/ladderlogic/: basictest.cpp
deprecated/ladderlogic/gatesMemory/: AND.h  NC.h  NO.h  connector.h  logicgate.h
deprecated/ladderlogic/res/: b.plc  simpleiob.iob  template.iob
deprecated/ladderlogic/wrapper/: IOBuffer.h  ladderlist.h  node.h
deprecated/lib/gates/: AND.h  NAND.h  NOT.h  XOR.h  logicgate.h
deprecated/lib/gates/tests/: gatestest.cpp
doc/: How To Construct PLC and IOB files  Ladder Gate Project
source/: Deprecated.code
source/Application/: TASK_4.cpp
source/Application/LadderLogic/: Ladder.h  andGate.cpp  andGate.h  forcmake.txt  ladderLogicHeader.h  ladderlogic.cpp  logicGate.cpp  logicGate.h  orGate.cpp  orGate.h  signalNode.cpp  signalNode.h
source/Application/LadderLogic/gates/: Ladder.cpp  andGate.cpp  andGate.h  gateList.cpp  gateList.h  ladderLogicHeader.h  logicGate.cpp  logicGate.h  logicGateConnector.cpp  logicGateConnector.h  node.cpp  node.h  normallyClosedGate.cpp  normallyClosedGate.h  normallyOpenGate.cpp  normallyOpenGate.h  orGate.cpp  orGate.h
source/Application/LadderLogic/res/: oneladder.plc  oneladdermanygates.plc  template.plc  template.txt
source/Application/LadderLogic/scriptlines/: gateList.cpp  gateList.h  node.cpp  node.h
source/Application/LadderLogic/tests/: testUnit.cpp  testUnit.h
source/Application/LadderLogic/utils/: Console.cpp  Console.h  DataManager.cpp  DataManager.h  LocalHeaderPreLoader.h  Logging.cpp  Logging.h  User.cpp  User.h  UserList.cpp  UserList.h  node.cpp  node.h  nodelist.cpp  nodelist.h  testUnit.cpp  testUnit.h
source/Application/LadderLogic/wrapper/: IOBuffer.cpp  IOBuffer.h  instructionSet.cpp  instructionSet.h  plc.cpp  plc.h  plcgen.cpp  plcgen.h  scriptline.cpp  scriptline.h  scriptlinelist.cpp  scriptlinelist.h
source/Application/LadderLogic/wrapper/old/: IOBuffer.oldcpp  instructionSet.oldcpp  scriptline.oldcpp  scriptlinelist.oldcpp  scriptlinelist.oldh
source/Engine/: main.cpp
source/Engine/Core/: GLErrorHandler.cpp  GLErrorHandler.h  main.cpp  timestep.h
source/Engine/Events/: Event.h
source/Engine/Platform/OpenGL/: indexBuffer.cpp  indexBuffer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h  vertexBufferLayout.cpp  vertexBufferLayout.h
source/Engine/Renderer/: Camera.h
source/Engine/tests/: test.cpp  test.h  testCamera.cpp  testCamera.h  testCameraManipulation.cpp  testCameraManipulation.h  testClearColor.cpp  testClearColor.h  testCube.cpp  testCube.h  testCubeTexture.cpp  testCubeTexture.h  testInclusiveBasics.cpp  testInclusiveBasics.h  testMultipleObjects.cpp  testMultipleObjects.h  testMultipleRectangleTextures.cpp  testMultipleRectangleTextures.h  testProjectionMetrices.cpp  testProjectionMetrices.h  testRectangle.cpp  testRectangleAbstraction.cpp  testRectangleAbstraction.h  testTexture.cpp  testTexture.h  testTextureNoAbstraction.cpp  testTraingleTransformation.cpp  testTraingleTransformation.h  testTriangle.cpp  testTriangle3D.cpp  testTriangle3D.h  testTriangleAbstraction.cpp  testTriangleAbstraction.h  testTriangleColor.cpp  testTriangleColor.h  testTriangleColorAnimation.cpp  testTriangleColorAnimation.h
source/apps/ladderlogic/: basictest.cpp  basictest.h  main.cpp
source/apps/ladderlogic/gatesMemory/: OR.h  binary.h  connector.h  gatesHeaderLoader.h  logicgate.h  unary.h
source/apps/ladderlogic/res/: 1LXG.plc  NC.plc  NO.plc  oneladder.plc
source/apps/ladderlogic/res/ll/iob/: binarygates.iob  uandbgates.iob
source/apps/ladderlogic/res/ll/plc/: AND.plc  OR.plc  UaB2.plc  a.plc  template.plc
source/apps/ladderlogic/utils/: DataManager.cpp  LocalHeaderPreLoader.h
source/apps/ladderlogic/wrapper/: IOBuffer.cpp  ladderlist.cpp  ladderlist.h  node.cpp  node.h  plc.cpp  plc.h  plcgen.cpp  plcgen.h  wrapperHeader.h
source/lib/gates/: NOR.h  OR.h  XNOR.h  binary.h  connector.h  gatesHeaderLoader.h  unary.h
source/res/shaders/: Basic.shader  cubeTexture.shader  triangleRainbow.shader
source/tests/: _testInclude.h  test.cpp  test.h  testAdvancedCameraManipulation.cpp  testAdvancedCameraManipulation.h  testAdvancedCameraManipulation.h.cpp  testCamera.cpp  testCamera.h  testCameraManipulation.cpp  testCameraManipulation.h  testCameraRotation.cpp  testCameraRotation.h  testClearColor.cpp  testClearColor.h  testCube.cpp  testCube.h  testCubeTexture.cpp  testCubeTexture.h  testInclusiveBasics.cpp  testInclusiveBasics.h  testMultipleObjects.cpp  testMultipleObjects.h  testMultipleRectangleTextures.cpp  testMultipleRectangleTextures.h  testProjectionMatrices.cpp  testProjectionMatrices.h  testProjectionMetrices.cpp  testProjectionMetrices.h  testRectangle.cpp  testRectangle.h  testRectangleAbstraction.cpp  testRectangleAbstraction.h  testSingleTextureCube.cpp  testSingleTextureCube.h  testTexture.cpp  testTexture.h  testTextureCord.cpp  testTextureCord.h  testTextureNoAbstraction.cpp  testTextureNoAbstraction.h  (+16 more)
utility/linux/: CMakeLists.txt  build.sh  get_libraries_linux.sh
utility/misc/: 123CMakePresets.json  123vcpkg.json
utility/windows/: CMakeLists.txt  CMakeSettings.json  get_libraries_windows.bat  get_libraries_windows_vcpkg.bat  vcpkg_rf.txt
utility/windows/x64-Build/res/: template.txt
utility/windows/x64-Build/res/shaders/: another.shader  new.shader
